...
}

final class ImagesListCell: UITableViewCell {
    static let reuseIdentifier = "ImagesListCell"

    @IBOutlet weak var cellImage: UIImageView!
    @IBOutlet weak var likeButton: UIButton!
    @IBOutlet weak var dateLabel: UILabel!

    weak var delegate: ImagesListCellDelegate?
    private var gradientLayer: CAGradientLayer?

    override func prepareForReuse() {
...
