...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    // MARK: - Жизненный цикл
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        setupProgressObservation()
        presenter?.viewDidLoad()
    }
    
    deinit {
...
