...
    
    @IBOutlet weak var loginButton: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        loginButton.accessibilityIdentifier = "Authenticate"
        configureBackButton()
        configurateLoginButton()
    }
    
    private func configurateLoginButton() {
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
...
